<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ringo-star</string>

    <string name="cancel" tools:ignore="ButtonCase">Cancel</string>
    <string name="delete">Delete</string>

    <string name="content_description_purple_logo">Purple Logo</string>
    <string name="content_description_white_logo">White Logo</string>

    <string name="magic_hint_model">LLM Inference Model</string>

    <string name="gemma2b">Gemma 2B</string>
    <string name="falcon_rw1b">Falcon-RW-1B</string>
    <string name="stable_lm3b">StableLM-3B</string>
    <string name="phi2">Phi-2</string>

    <string name="gemma2b_hint">&lt;strong&gt;&lt;u&gt;Gemma 2B&lt;/u&gt;&lt;/strong&gt; is a model with &lt;strong&gt;2 billion parameters&lt;/strong&gt; developed by &lt;strong&gt;Google&lt;/strong&gt; and designed to be flexible and general-purpose, with good capabilities for understanding technical questions and working with structured representations like graphs.</string>
    <string name="falcon_rw1b_hint">&lt;strong&gt;&lt;u&gt;Falcon-RW-1B&lt;/u&gt;&lt;/strong&gt; is a model with &lt;strong&gt;1 billion parameters&lt;/strong&gt; developed by &lt;strong&gt;TII (Technology Innovation Institute)&lt;/strong&gt;, a research institute based in the United Arab Emirates. It is designed to perform natural language processing tasks such as text generation, sentence completion, and machine translation. It is efficient and lightweight, suitable for devices with limited resources, and based on refined data from the web.</string>
    <string name="stable_lm3b_hint">&lt;strong&gt;&lt;u&gt;StableLM-3B&lt;/u&gt;&lt;/strong&gt; is a model with &lt;strong&gt;3 billion parameters&lt;/strong&gt; developed by &lt;strong&gt;Stability AI&lt;/strong&gt;, the same company behind &lt;strong&gt;Stable Diffusion&lt;/strong&gt;. The model is designed to process and generate natural language, similar to models like GPT or Falcon, and stands out for its openness and accessibility.</string>
    <string name="phi2_hint">&lt;strong&gt;&lt;u&gt;Phi-2&lt;/u&gt;&lt;/strong&gt; is a model with &lt;strong&gt;2.7 billion parameters&lt;/strong&gt; developed by &lt;strong&gt;Microsoft Research&lt;/strong&gt;, intended to improve the understanding and behavior of language agents in complex and realistic environments, with a particular focus on problem-solving skills and learning from experiences.</string>

    <string name="download">Download</string>

    <string name="something_went_wrong">Something went wrong</string>

    <string name="model_used">A prior computation by the %s model is currently underway</string>
    <string name="another_model">The %s model is given priority as it is preloaded</string>
    <string name="magic_button">Magic Button</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="pin">PIN</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="smoke">Smoke</string>
    <string name="ok">OK</string>

    <string-array name="bloodGroupSpinner">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>0+</item>
        <item>0-</item>
    </string-array>

    <string-array name="waistCircumferenceArrayMale">
        <item>Under 94 cm</item>
        <item>94–102 cm</item>
        <item>Over 102 cm</item>
    </string-array>

    <string-array name="waistCircumferenceArrayFemale">
        <item>Under 80 cm</item>
        <item>80–88 cm</item>
        <item>Over 88 cm</item>
    </string-array>

    <string-array name="activity30Array">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="fruitVegetableArray">
        <item>Every day</item>
        <item>Not every day</item>
    </string-array>

    <string-array name="bloodPressureMedicationArray">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="highBloodSugarLevelArray">
        <item>No</item>
        <item>Yes</item>
    </string-array>

    <string-array name="familyMembersDiabeteArray">
        <item>No</item>
        <item>Yes, but not parents, siblings or children</item>
        <item>Yes, including parents, siblings or children</item>
    </string-array>

    <string name="toast_all_fields_requires">All fields required</string>
    <string name="home">Home</string>
    <string name="magic">Magic</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="gender">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="blood_group">Blood Group</string>
    <string name="scriptField">...</string>
    <string name="update_profile">Update profile</string>
    <string name="close_app">Close app</string>
    <string name="delete_all_the_data">Delete all the data</string>
    <string name="questionnaires">Questionnaires</string>
    <string name="daily">Daily</string>
    <string name="semi_annual">Semi-annual</string>
    <string name="quarterly">Quarterly</string>
    <string name="monthly">Monthly</string>
    <string name="how_are_you_today">How are you today?</string>
    <string name="how_do_you_feel">How do you feel?</string>
    <string name="do_you_notice_a_lack_of_energy">Do you notice a lack of energy?</string>
    <string name="do_you_notice_mental_confusion">Do you notice mental confusion?</string>
    <string name="how_stressed_do_you_feel">How stressed do you feel?</string>
    <string name="blood_sugar_mg_dl">Blood sugar (mg/dL)</string>
    <string name="systolic_pressure_mmhg">Systolic pressure (mmHg)</string>
    <string name="diastolic_pressure_mmhg">Diastolic pressure (mmHg)</string>
    <string name="physical_activity_minutes">Physical activity (minutes)</string>
    <string name="did_you_eat_your_meals_regularly">Did you eat your meals regularly?</string>
    <string name="have_you_consumed_sweets_or_sugary_drinks">Have you consumed sweets or sugary drinks?</string>
    <string name="send">Send</string>
    <string name="treatment_management">Treatment management</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="symptoms_and_complications">Symptoms and complications</string>
    <string name="hba1c">HbA1c</string>
    <string name="cardiovascular_risk">Cardiovascular risk</string>
    <string name="findrisc">FINDRISC</string>
    <string name="have_you_taken_all_the_prescribed_medications_in_the_past_month">Have you taken all the prescribed medications in the past month?</string>
    <string name="have_you_had_difficulty_following_the_schedule_or_dosages">Have you had difficulty following the schedule or dosages?</string>
    <string name="have_you_recently_adjusted_the_dose_of_insulin_or_other_medications">Have you recently adjusted the dose of insulin or other medications?</string>
    <string name="are_you_using_a_continuous_glucose_monitoring_device">Are you using a continuous glucose monitoring device?</string>
    <string name="side_effects">Side effects</string>
    <string name="have_you_made_any_changes_to_your_diet_since_the_last_questionnaire">Have you made any changes to your diet since the last questionnaire?</string>
    <string name="do_you_sleep_at_least_7_hours_per_night">Do you sleep at least 7 hours per night?</string>
    <string name="have_you_experienced_significant_periods_of_stress_recently">Have you experienced significant periods of stress recently?</string>
    <string name="how_many_meals_do_you_eat_per_day">How many meals do you eat per day?</string>
    <string name="how_often_do_you_eat_sugary_foods">How often do you eat sugary foods?</string>
    <string name="how_often_do_you_workout">How often do you work out?</string>
    <string name="have_you_noticed_any_changes_in_your_vision">Have you noticed any changes in your vision?</string>
    <string name="have_you_experienced_pain_tingling_or_loss_of_sensation_in_your_feet">Have you experienced pain, tingling, or loss of sensation in your feet?</string>
    <string name="have_you_had_recurrent_infections_in_the_past_month">Have you had recurrent infections in the past month?</string>
    <string name="have_you_observed_wounds_or_ulcers_on_your_feet_that_are_not_healing">Have you observed wounds or ulcers on your feet that are not healing?</string>
    <string name="have_you_noticed_swelling_or_pain_in_your_joints">Have you noticed swelling or pain in your joints?</string>
    <string name="cholesterol_mg_dl">Cholesterol (mg/dL)</string>
    <string name="have_you_experienced_chest_pain_or_shortness_of_breath_during_exercise">Have you experienced chest pain or shortness of breath during exercise?</string>
    <string name="do_you_currently_smoke">Do you currently smoke?</string>
    <string name="are_you_following_a_diet_to_reduce_lipids">Are you following a diet to reduce lipids?</string>
    <string name="average_fasting_blood_glucose">Avg fasting blood glucose (mmol/L)</string>
    <string name="how_many_episodes_of_hypoglycemia_have_you_had_in_the_past_month">Episodes of hypoglycemia last month?</string>
    <string name="how_many_episodes_of_hyperglycemia_have_you_experienced">Episodes of hyperglycemia?</string>
    <string name="hba1c_last_value_measured_mmol_mol">HbA1c (mmol/mol)</string>
    <string name="what_is_your_waist_circumference">What is your waist circumference?</string>
    <string name="do_you_do_physical_activity_for_at_least_30_minutes_a_day_at_work_and_or_during_free_time_also_considering_your_normal_daily_activity">Do you get 30+ mins of daily physical activity (work/free time/daily routine)?</string>
    <string name="how_often_do_you_eat_vegetables_and_fruit">How often do you eat vegetables and fruit?</string>
    <string name="do_you_regularly_take_high_blood_pressure_medications">Do you regularly take high blood pressure medications?</string>
    <string name="have_you_ever_had_high_blood_sugar_levels_for_example_during_a_medical_visit_during_an_illness">Have you ever had high blood sugar levels?</string>
    <string name="do_you_have_any_family_members_with_type_1_or_type_2_diabetes">Do you have any family members with type 1 or type 2 diabetes?</string>
    <string name="loading">Loading</string>
    <string name="the_report_has_been_created_successfully_in_the_documents_folder_of_your_android_device">The report has been created successfully in the documents folder of your Android device.</string>
</resources>