<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:checked="true"
        android:color="@color/white"
        android:title="@string/home" />

    <item
        android:id="@+id/magic"
        android:icon="@drawable/ic_magic"
        android:color="@color/white"
        android:title="@string/magic" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:color="@color/white"
        android:title="@string/profile" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:color="@color/white"
        android:title="@string/settings" />
</menu>