<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.HowAreYouQuestionnaire">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:tint="?android:attr/colorPrimary"
                    app:srcCompat="@drawable/arrow_back"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/how_are_you_today"
                    android:textColor="?android:attr/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_do_you_feel"
                    android:textColor="@color/black" />

                <SeekBar
                    android:id="@+id/seekFeel"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:max="4"
                    android:progress="0" />
            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchLackEnergy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/do_you_notice_a_lack_of_energy" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchMentalConfusion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/do_you_notice_mental_confusion" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_stressed_do_you_feel"
                    android:textColor="@color/black" />

                <SeekBar
                    android:id="@+id/seekStressed"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:max="3"
                    android:progress="0" />
            </LinearLayout>

            <EditText
                android:id="@+id/txtBloodSugar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text"
                android:layout_marginTop="20dp"
                android:hint="@string/blood_sugar_mg_dl"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/txtSystolicPressure"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/systolic_pressure_mmhg"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/txtDiastolicPressure"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/diastolic_pressure_mmhg"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/txtPhysicalActivity"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:hint="@string/physical_activity_minutes"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchMeals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/did_you_eat_your_meals_regularly" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchSugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/have_you_consumed_sweets_or_sugary_drinks" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/send" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>