<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.LifestyleQuestionnaire">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:tint="?android:attr/colorPrimary"
                    app:srcCompat="@drawable/arrow_back"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/lifestyle"
                    android:textColor="?android:attr/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/txtNumberMeals"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text"
                android:layout_marginTop="20dp"
                android:hint="@string/how_many_meals_do_you_eat_per_day"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number" />

            <EditText
                android:id="@+id/txtSugaryFoods"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text"
                android:layout_marginTop="20dp"
                android:hint="@string/how_often_do_you_eat_sugary_foods"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchDietChanged"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/have_you_made_any_changes_to_your_diet_since_the_last_questionnaire" />

            <EditText
                android:id="@+id/txtNumberExercises"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edit_text"
                android:layout_marginTop="20dp"
                android:hint="@string/how_often_do_you_workout"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchSleep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/do_you_sleep_at_least_7_hours_per_night" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchStress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/have_you_experienced_significant_periods_of_stress_recently" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/send" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>