<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".questionnaire.TreatmentQuestionnaire">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    app:tint="?android:attr/colorPrimary"
                    app:srcCompat="@drawable/arrow_back"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:text="@string/treatment_management"
                    android:textColor="?android:attr/colorPrimary"
                    android:textSize="20sp" />

            </LinearLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchAllMedicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/have_you_taken_all_the_prescribed_medications_in_the_past_month" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchDifficultSchedule"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/have_you_had_difficulty_following_the_schedule_or_dosages" />

            <EditText
                android:id="@+id/txtSideEffects"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:background="@drawable/edit_text"
                android:layout_marginTop="20dp"
                android:hint="@string/side_effects"
                android:inputType="text" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchChangeInsulin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/have_you_recently_adjusted_the_dose_of_insulin_or_other_medications" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switchMonitorGlucose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/are_you_using_a_continuous_glucose_monitoring_device" />

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button"
                android:text="@string/send" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>